[package]
name = "sfox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "*"
futures = "*"
futures-util = "*"
reqwest = { version = "*", features = ["json"] }
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }

[dev-dependencies]
mockito = "*"
tokio-test = "*"
