[package]
authors = ["Dave Miner <dave@halyard.systems>"]
description = "Unofficial HTTP and Websocket Client for the SFox API"
keywords = ["crypto", "finance", "http", "trading", "websocket"]
license = "MIT"
name = "sfox"
repository = "https://github.com/daveminer/sfox"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
futures = "0.3.30"
futures-util = "0.3.30"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.53"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }

[dev-dependencies]
mockito = "1.2.0"
tokio-test = "0.4.3"
